modules/security_groups/main.tf
##############################
# security groups setup
##############################

resource "aws_security_group" "estio_ec2_sg" {
  name        = "estio_ec2_sg-tf"
  description = "Allow http and https traffic"
  vpc_id      = var.vpc_id

  ingress {
    description = "httpx from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "ssh"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "port 5000"
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    to_port     = 0
    from_port   = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "estio_ec2_sg"
  }
}

resource "aws_security_group" "estio_db_sg_from_ec2_sg" {
  name        = "estio-db-sg-tf"
  description = "Allow 3306"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.estio_ec2_sg.id]
  }

  egress {
    to_port     = 0
    from_port   = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "estio_db_sg_from_ec2_sg"
  }
}
